# Final_ELT_Project

./: .gitignore  Dockerfile.airflow  Dockerfile.bronze  Dockerfile.gold  Dockerfile.silver  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run_bronze.sh  run_gold.sh  run_pipeline.sh  run_silver.sh
airflow/dags/: elt_pipeline.py  elt_pipeline_git.py
analyseBI/: star_schema_diagram.md
bronze_notebooks/: .cache.sqlite  ingestion_api_data.ipynb  ingestion_windpower_data.ipynb  ingestion_windturbinepower_data.ipynb
bronze_scripts/: .cache.sqlite  ingestion_api_data.py  ingestion_windturbinepower_data.py
gold_notebooks/: gold_tranformations.ipynb  star_schema_diagram.md
gold_scripts/: gold_transformations.py
silver_notebooks/: transform_api_data.ipynb  transform_windturbinepower_data.ipynb  transform_windturbinepower_enriched.ipynb
silver_scripts/: transform_api_data.py  transform_windturbinepower_data.py  transform_windturbinepower_enriched.py
