[project]
name = "finaleltproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=4.1,<8.1.8",
    "dash>=4.1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "pgcli>=4.4.0",
    "plotly>=6.7.0",
    "psycopg>=3.3.3",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "sqlalchemy>=2.0.49",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pgcli >= 4.4.0",
    "apache-airflow>=3.0",
    "python-dotenv>=1.0",
    "pendulum>=3.0",
]
